apps/arcs/arc-phi/netpol/phi-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"cilium.io/v2","kind":"CiliumNetworkPolicy","metadata":{"annotations":{},"name":"phi-egress","namespace":"arc-phi"},"spec":{"egress":[{"toEndpoints":[{"matchLabels":{"k8s:io.kubernetes.pod.namespace":"kube-system","k8s:k8s-app":"kube-dns"}},{"matchLabels":{"k8s:app.kubernetes.io/name":"coredns","k8s:io.kubernetes.pod.namespace":"kube-system"}},{"matchLabels":{"k8s:io.kubernetes.pod.namespace":"kube-system","k8s:k8s-app":"coredns"}}],"toPorts":[{"ports":[{"port":"53","protocol [...]
  creationTimestamp: "2025-10-31T20:02:34Z"
  generation: 1
  name: phi-egress
  namespace: arc-phi
  resourceVersion: "6359519"
  uid: 0f76318c-2d63-4794-80fa-23d1750f0654
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    - matchLabels:
        k8s:app.kubernetes.io/name: coredns
        k8s:io.kubernetes.pod.namespace: kube-system
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: coredns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: '*'
  - toCIDR:
    - 10.96.0.10/32
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toPorts:
    - ports:
      - port: "7422"
        protocol: TCP
    toServices:
    - k8sService:
        namespace: arc-chi
        serviceName: chi-bus
  - toCIDR:
    - 10.111.237.23/32
    toPorts:
    - ports:
      - port: "7422"
        protocol: TCP
  endpointSelector:
    matchLabels:
      k8s:app: phi
      k8s:role: cortex
status:
  conditions:
  - lastTransitionTime: "2025-10-31T20:02:34Z"
    message: Policy validation succeeded
    status: "True"
    type: Valid
